<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">d20 Character Sheet</string>
    <string name="attribute_title">Abilities</string>
    <string name="attribute_str">STR</string>
    <string name="attribute_dex">DEX</string>
    <string name="attribute_con">CON</string>
    <string name="attribute_int">INT</string>
    <string name="attribute_wis">WIS</string>
    <string name="attribute_cha">CHA</string>
    <string name="attribute_strength">Strength</string>
    <string name="attribute_dexterity">Dexterity</string>
    <string name="attribute_constitution">Constitution</string>
    <string name="attribute_intelligence">Intelligence</string>
    <string name="attribute_wisdom">Wisdom</string>
    <string name="attribute_charisma">Charisma</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_name_label">Name:</string>
    <string name="appearance_player_label">Player:</string>
    <string name="appearance_race_label">Race:</string>
    <string name="appearance_sex_label">Sex:</string>
    <string name="appearance_class_level_label">Class:</string>
    <string name="appearance_class_level_button">Edit Class</string>
    <string name="appearance_alignment_label">Align:</string>
    <string name="appearance_xptable_label">XP Table:</string>
    <string name="appearance_experience_label">Exp:</string>
    <string name="save_title">Saves</string>
    <string name="save_strength_label">Strength:</string>
    <string name="save_dexterity_label">Dexterity:</string>
    <string name="save_constitution_label">Constitution:</string>
    <string name="save_intelligence_label">Intelligence:</string>
    <string name="save_wisdom_label">Wisdom:</string>
    <string name="save_charisma_label">Charisma:</string>
    <string name="save_fortitude_label">Fortitude:</string>
    <string name="save_reflex_label">Reflex:</string>
    <string name="save_will_label">Will:</string>
    <string name="save_name">Name</string>
    <string name="save_heading_base">Base</string>
    <string name="save_heading_proficiency">Prof.</string>
    <string name="save_attribute_modifier">Attr.</string>
    <string name="save_modifier">Misc</string>
    <string name="class_level_edit_new">New Class</string>
    <string name="class_level_edit_title">Edit Class Level</string>
    <string name="class_level_edit_delete">Delete</string>
    <string name="class_level_create_title">Select Class</string>
    <string name="activity_base_character_sheet_image_hint">Image of character</string>
    <string name="character_sheet_ad_unit_id">ca-app-pub-8129946526938446/6306190451</string>
    <string name="page_sheet_title">Sheet</string>
    <string name="page_sheet_menu_add_image">Add Image</string>
    <string name="page_sheet_menu_add_thumbnail">Add Thumbnail</string>
    <string name="page_sheet_message_add_thumbnail_failed">Error occurred while processing thumbnail</string>
    <string name="page_sheet_message_add_image_failed">Error occurred while processing image</string>
    <string name="page_sheet_die_roll_title">Roll</string>
    <string name="page_sheet_roll_initiative_title">Initiative</string>
    <string name="page_sheet_roll_bab_title">BAB</string>
    <string name="page_sheet_roll_cmb_title">CMB/Grapple</string>
    <string name="page_sheet_roll_cmd_title">CMD</string>
    <string name="character_list_title">Character List</string>
    <string name="character_list_delete">Delete</string>
    <string name="character_list_menu_about">Manual</string>
    <string name="character_list_menu_switch_game_system">Switch Game System</string>
    <string name="character_list_menu_switch_dndv35">DnD v.3.5</string>
    <string name="character_list_menu_switch_pathfinder">Pathfinder</string>
    <string name="character_list_menu_switch_dnd5e">DnD 5e</string>
    <string name="character_list_menu_administration">Administration</string>
    <string name="character_list_menu_preferences">Preferences</string>
    <string name="character_list_menu_export">Export</string>
    <string name="character_list_menu_import">Import</string>
    <string name="character_list_menu_backup_restore">Backup &amp; Restore</string>
    <string name="character_list_menu_purchase">Purchase Premium Version</string>
    <string name="character_list_menu_feedback">Give Feedback</string>
    <string name="character_list_wait_load_game_system">Load Game System</string>
    <string name="character_list_wait_load_dndv35">Load DnD v.3.5</string>
    <string name="character_list_wait_load_dnd5e">Load DnD 5e</string>
    <string name="character_list_wait_load_pathfinder">Load Pathfinder</string>
    <string name="character_list_wait_create_databases">Create Databases</string>
    <string name="character_list_wait_load_game_systems">Load Game Systems</string>
    <string name="character_list_fab_button_description">Create Character</string>
    <string name="character_list_image_hint">Thumbnail of character</string>
    <string name="character_list_ad_unit_id">ca-app-pub-8129946526938446/7481006483</string>
    <string name="combat_title">Combat</string>
    <string name="combat_hitpoints_label">HP:</string>
    <string name="combat_max_hitpoints_label">max. HP:</string>
    <string name="combat_armorclass_label">AC:</string>
    <string name="combat_proficiency_bonus_label">Proficiency:</string>
    <string name="combat_flatfooted_armorclass_label">Flat-Footed:</string>
    <string name="combat_touch_armorclass_label">Touch:</string>
    <string name="combat_speed_label">Speed:</string>
    <string name="combat_initiative_abbreviation_label">INI:</string>
    <string name="combat_baseattackbonus_label">BAB:</string>
    <string name="combat_cmb_label">CMB/Grapple:</string>
    <string name="combat_cmd_label">CMD:</string>
    <string name="combat_initiative_label">Initiative:</string>
    <string name="create_name_label">Name</string>
    <string name="create_player_label">Player</string>
    <string name="create_gender_label">Gender</string>
    <string name="create_alignment_label">Align</string>
    <string name="create_button_label">Create</string>
    <string name="page_skill_title">Skills</string>
    <string name="skill_list_max_ranks">Max Ranks</string>
    <string name="skill_list_skill_points">Skill points</string>
    <string name="skill_list_skill_points_of">of</string>
    <string name="skill_list_tab_title_all">All</string>
    <string name="skill_list_tab_title_fav">Favorites</string>
    <string name="skill_list_tab_title_trained">Trained</string>
    <string name="skill_list_add_to_favorites">Add to favorites</string>
    <string name="skill_list_remove_from_favorites">Remove from favorites</string>
    <string name="skill_list_rank">Rank</string>
    <string name="skill_list_mod">Misc Mod</string>
    <string name="skill_list_menu_edit_skills">Edit skills</string>
    <string name="skill_edit_rank">Rank</string>
    <string name="skill_edit_proficiency">Proficiency</string>
    <string name="skill_edit_modifier">Misc Modifier</string>
    <string name="page_feat_title">Feats</string>
    <string name="feat_list_show_all_feats">Show all feats</string>
    <string name="feat_list_preposition">of</string>
    <string name="feat_list_feats">feats</string>
    <string name="feat_list_add_feat">Add to character</string>
    <string name="feat_list_remove_feat">Remove from character</string>
    <string name="feat_list_edit_feat">Edit category</string>
    <string name="feat_list_fighter_bonus">Fighter Bonus Feat</string>
    <string name="feat_list_multiple">Multiple times, do not stack</string>
    <string name="feat_list_stack">Multiple times, do stack</string>
    <string name="feat_list_benefit"><b><u>Benefit:</u></b></string>
    <string name="feat_list_prerequisite"><b><u>Prerequisite:</u></b></string>
    <string name="feat_edit_category_label">Category:</string>
    <string name="money_title">Money</string>
    <string name="money_platinum_label">Platinum:</string>
    <string name="money_gold_label">Gold:</string>
    <string name="money_silver_label">Silver:</string>
    <string name="money_copper_label">Copper:</string>
    <string name="page_attack_title">Attacks</string>
    <string name="weaponattack_list_attack_roll">Attack Roll</string>
    <string name="weaponattack_list_critical_subtitle">Critical Confirmation Roll:</string>
    <string name="weaponattack_list_fumble_subtitle">You fumbled!!!</string>
    <string name="weaponattack_list_damage_roll">Damage Roll</string>
    <string name="weaponattack_list_critical_roll">Critical Roll</string>
    <string name="weaponattack_list_delete">Delete Attack</string>
    <string name="weaponattack_name">Name</string>
    <string name="weaponattack_weapon">Weapon</string>
    <string name="weaponattack_attackwield">Wield</string>
    <string name="equipment_list_show_magic">Magic Item</string>
    <string name="equipment_list_menu_edit_weapons">Add/Remove Weapons</string>
    <string name="equipment_list_menu_edit_armor">Add/Remove Armor</string>
    <string name="equipment_list_menu_edit_goods">Add/Remove Goods</string>
    <string name="about_manual">Manual: http://d20cs.bplaced.net/manual.html</string>
    <string name="about_homepage">Homepage: http://d20cs.bplaced.net/</string>
    <string name="about_join">You\'re welcome to join the open source project on GitHub: https://github.com/twiederk/d20Framework/</string>
    <string name="about_contact">Please report suggestions and problems to torsten.wiederkehr@gmail.com</string>
    <string name="about_thanks">Thanks to Holger Trapp for supplying spells of DnD v.3.5\nThanks to Zhacrie White for entering description of goods of DnD v.3.5\nThanks to Michel Chartrand for entering the races of the Advanced Races Guide</string>
    <string name="about_ogl">Open Gaming Licence</string>
    <string name="about_copyright">Copyright &#169; 2009&#8211;2023 Torsten Wiederkehr\nAll rights reserved</string>
    <string name="about_image_hint">Icon of application</string>
    <string name="spell_administration_descriptor_acid">Acid</string>
    <string name="spell_administration_descriptor_air">Air</string>
    <string name="spell_administration_descriptor_chaotic">Chaotic</string>
    <string name="spell_administration_descriptor_cold">Cold</string>
    <string name="spell_administration_descriptor_darkness">Darkness</string>
    <string name="spell_administration_descriptor_death">Death</string>
    <string name="spell_administration_descriptor_earth">Earth</string>
    <string name="spell_administration_descriptor_electricity">Electricity</string>
    <string name="spell_administration_descriptor_evil">Evil</string>
    <string name="spell_administration_descriptor_fear">Fear</string>
    <string name="spell_administration_descriptor_fire">Fire</string>
    <string name="spell_administration_descriptor_force">Force</string>
    <string name="spell_administration_descriptor_good">Good</string>
    <string name="spell_administration_descriptor_languagedependent">Language-Dependent</string>
    <string name="spell_administration_descriptor_lawful">Lawful</string>
    <string name="spell_administration_descriptor_light">Light</string>
    <string name="spell_administration_descriptor_mindaffecting">Mind-Affecting</string>
    <string name="spell_administration_descriptor_sonic">Sonic</string>
    <string name="spell_administration_descriptor_water">Water</string>
    <string name="spell_administration_component_verbal">Verbal</string>
    <string name="spell_administration_component_somatic">Somatic</string>
    <string name="spell_administration_component_material">Material</string>
    <string name="spell_administration_component_focus">Focus</string>
    <string name="spell_administration_component_divinefocus">Divine Focus</string>
    <string name="spell_administration_component_xpcost">XP Cost</string>
</resources>