<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_activity_character_list_new_character"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/character_list_menu_new_character"/>
    <item
        android:id="@+id/menu_activity_character_list_administration"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/character_list_menu_administration"/>
    <item
        android:id="@+id/menu_activity_character_list_switch_game_system"
        android:icon="@drawable/icon_d20_logo"
        android:title="@string/character_list_menu_switch_game_system"/>
    <item
        android:id="@+id/menu_activity_character_list_export"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/character_list_menu_export"/>
    <item
        android:id="@+id/menu_activity_character_list_import"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/character_list_menu_import"/>
    <item
        android:id="@+id/menu_activity_character_list_backup_restore"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/character_list_menu_backup_restore"/>
    <item
        android:id="@+id/menu_activity_character_list_preference"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/character_list_menu_preferences"/>
    <item
        android:id="@+id/menu_activity_character_list_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/character_list_menu_about"/>

</menu>
