<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.About"
    android:orientation="vertical" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/about_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/about_image_hint"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/about_app_name"
            style="@style/AppTheme.ListItemHeading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/about_app_icon"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/app_version"
            style="@style/AppTheme.ListItemText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_app_name"
            android:layout_toEndOf="@id/about_app_icon">
        </TextView>
    </RelativeLayout>

    <TextView
        android:id="@+id/about_manual"
        style="@style/AppTheme.ListItemText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:text="@string/about_manual" />

    <TextView
        style="@style/AppTheme.ListItemText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:text="@string/about_homepage" />

    <TextView
        style="@style/AppTheme.ListItemText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:text="@string/about_join" />

    <TextView
        style="@style/AppTheme.ListItemText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autoLink="email"
        android:text="@string/about_contact" />

    <TextView
        style="@style/AppTheme.ListItemText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autoLink="web"
        android:text="@string/about_thanks" />

    <Button
        android:id="@+id/about_button_ogl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_ogl" />

    <TextView
        style="@style/AppTheme.ListItemText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/about_copyright" />

</LinearLayout>
